Also thumbnail stretch issue resolved for boxed tabbed preset

--- a/assets/css/ezd-docs-widgets.css
+++ b/assets/css/ezd-docs-widgets.css
@@ -730,6 +730,7 @@
 .documentation_text .doc-logo {
   margin-bottom: 20px;
   max-width: 150px;
+  height: auto;
 }
 .documentation_text .round {
   width: 100px;
