--- a/assets/scss/frontend/_widget_docs.scss
+++ b/assets/scss/frontend/_widget_docs.scss
@@ -181,8 +181,8 @@
 	.doc-logo {
 		margin-bottom: 20px;
 		max-width: 150px;
+		height: auto;
 	}
-
 	.round {
 		width: 100px;
 		height: 100px;
